# pups2

./: .gitignore  Cargo.toml  README.md  emotion-engine.yaml
crates/decoder_generator/: Cargo.toml
crates/decoder_generator/src/: main.rs
crates/pups2/: Cargo.toml
crates/pups2/src/: bits.rs  bytes.rs  enum_set.rs  executable_memory_allocator.rs  fifo.rs  main.rs
crates/pups2/src/emotion_engine/: bus.rs  dmac.rs  gif.rs  mod.rs  rdram.rs  timer.rs
crates/pups2/src/emotion_engine/core/: control.rs  execution.rs  instruction.rs  instruction_gen.rs  interpreter.rs  jit.rs  mod.rs  register.rs
crates/pups2/src/emotion_engine/gs/: mod.rs  privileged_registers.rs  registers.rs
src/: bits.rs  disassembler.rs  executable_memory_allocator.rs  fifo.rs  fix.rs  jit_builder.rs  main.rs
src/emotion_engine/: bus.rs  disassembler.rs  dmac.rs  gif.rs  gs.rs  instruction.rs  interpreter.rs  memory.rs  mod.rs  register.rs  scheduler.rs  state.rs  timer.rs  tlb.rs
src/emotion_engine/core/: control.rs  core.rs  decoder.rs  disassembler.rs  execution.rs  fpu.rs  instruction.rs  interpreter.rs  jit.rs  mmu.rs  mod.rs  register.rs  state.rs
src/emotion_engine/gs/: mod.rs  pixel_storage.rs  privileged_registers.rs  registers.rs  rendering.rs
